tests/e2e/not_allowed/package.error
Error: syntax error in story at line 1, column 1

1|    package = 1
      ^^^^^^^

E0030: `package` is reserved for future use
